Remove use of deprecated -Xverify:none